crates/wac-parser/tests/resolution/fail/import-id-span.wac
package test:comp;

import env-foo: wasi:cli/environment;

import env-bar: wasi:cli/environment;
